Add api for communication with outside word.